fix: en descriptons

--- a/my-resume-en.tex
+++ b/my-resume-en.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt,letterpaper]{article}
 
-% Including essential packages for formatting
+% Essential packages for formatting
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
@@ -10,25 +10,25 @@
 \usepackage{xcolor}
 \usepackage{titlesec}
 
-% Configuring fonts and layout for ATS readability
+% Font and layout settings for ATS readability
 \renewcommand{\familydefault}{\sfdefault}
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{6pt}
 
-% Customizing section headers for clarity
+% Custom section headers for clarity
 \titleformat{\section}{\large\bfseries}{\thesection}{1em}{}
 \titlespacing*{\section}{0pt}{12pt}{6pt}
 
-% Defining a custom itemize environment for achievements
+% Custom itemize environment for achievements
 \newlist{achievements}{itemize}{1}
 \setlist[achievements]{label=$\cdot$, leftmargin=*, itemsep=2pt}
 
-% Beginning of the document
+% Document starts here
 \begin{document}
 
 % Header with contact information
 \begin{center}
-    \textbf{\Large Full Stack \& Mobile Developer} \\
+    \textbf{\Large Full Stack Software Engineer \& Mobile Developer} \\
     \vspace{5pt}
     Guarulhos, São Paulo, Brazil \\
     +55 11 99962-9173 | +55 11 97525-2946 \\
@@ -37,11 +37,13 @@
     \href{http://caioneves.tech}{caioneves.tech}
 \end{center}
 
-% Summary Section
+% Summary section
 \section{Summary}
-Dedicated Full Stack and Mobile Developer with extensive experience in building scalable, high-performance web and mobile applications using TypeScript, JavaScript, React Native, Next.js, NestJS, and GraphQL. Proficient in backend development with Java, Spring Boot, Node.js, MongoDB, PostgreSQL, and Kafka, and skilled in cloud infrastructure with AWS (S3, Lambda, ECS, ECR, SQS, SNS). Expert in implementing Domain-Driven Design (DDD), Clean Code, and CI/CD pipelines to deliver robust solutions. Experienced in version control with Git, ensuring efficient collaboration and code management. Passionate about optimizing performance, automating processes, and enhancing user experience through innovative software solutions.
+I am a Full Stack Software Engineer and Mobile Developer with experience in developing scalable web and mobile applications focused on performance and a great user experience. I work with TypeScript, JavaScript, React Native, Next.js, NestJS, and GraphQL, as well as backends in Java (Spring Boot), Node.js, MongoDB, PostgreSQL, and Kafka. I also have knowledge in cloud infrastructure using AWS services such as S3, Lambda, ECS, ECR, SQS, and SNS.
 
-% Technical Skills Section
+In my daily work, I apply best development practices such as Domain-Driven Design (DDD), Clean Code, and Continuous Integration/Continuous Deployment (CI/CD), aiming to deliver reliable and maintainable solutions. I have experience with version control using Git and collaboration in agile teams. I enjoy working on challenging projects where it’s possible to optimize processes, improve performance, and create solutions that deliver real value to users and businesses.
+
+% Technical Skills section
 \section{Technical Skills}
 \begin{itemize}[leftmargin=*]
     \item \textbf{Frontend \& Mobile}: TypeScript, JavaScript, React Native, Next.js, Angular, Tailwind CSS, Expo
@@ -49,41 +51,40 @@ Dedicated Full Stack and Mobile Developer with extensive experience in building 
     \item \textbf{Cloud \& DevOps}: AWS (S3, Lambda, ECS, ECR, SQS, SNS), Docker, Git, CI/CD pipelines
 \end{itemize}
 
-% Professional Experience Section
+% Professional Experience section
 \section{Professional Experience}
 
-\textbf{Full Stack Developer - Mid-Level} \hfill Feb 2025 – Present \\
+\textbf{Full Stack Developer - Mid-level} \hfill Feb 2025 – Present \\
 \textit{RUK, Guarulhos, São Paulo, Brazil}
 \begin{achievements}
-    \item Developed optimized audio processing pipelines using Python and AWS Lambda, integrating with S3 and ECR to meet business objectives, achieving 95\% accuracy in automated validations.
-    \item Created solutions for employee time tracking validation through audio analysis using TypeScript and Node.js, automating processes and reducing manual errors by 60\%.
-    \item Implemented containerized microservices with Docker and AWS ECS, optimizing infrastructure costs and increasing system reliability by 30\%.
-    \item Reduced audio processing time from 7 seconds to 2.5 seconds by deploying AWS Lambda with Docker images in Amazon ECR, utilizing a cost-effective pay-per-request model.
+    \item Developed optimized audio processing pipelines using Python and AWS Lambda, integrating with S3 and ECR to meet business goals, achieving 95\% accuracy in automated validations.
+    \item Created solutions for validating employee time records through audio analysis, using TypeScript and Node.js, automating processes and reducing manual errors by 60\%.
+    \item Implemented containerized microservices with Docker and AWS ECS, reducing infrastructure costs and increasing system reliability by 30\%.
+    \item Reduced audio processing time from 7 seconds to 2.5 seconds by deploying AWS Lambda with Docker images in Amazon ECR, using a cost-efficient pay-per-request model.
 \end{achievements}
 
 \textbf{Full Stack Developer} \hfill Sep 2023 – Dec 2024 \\
 \textit{Mobi Logística, Guarulhos, São Paulo, Brazil}
 \begin{achievements}
-    \item Architected scalable systems using NestJS, GraphQL, and MongoDB, ensuring 99.9\% availability and efficient handling of large-scale data queries.
-    \item Optimized mobile applications with React Native, Tailwind CSS, and Expo, integrating interactive graphics to reduce view loading time by 30\%.
-    \item Enhanced a logistics delivery application with an offline-first approach using React Native and TypeScript, reducing data synchronization time by 50\% and enabling continuous operation in low-connectivity areas.
-    \item Implemented global state management and caching strategies with JavaScript and Redux, ensuring reliable offline functionality and improved user experience.
+    \item Built scalable systems using NestJS, GraphQL, MongoDB, and PostgreSQL, ensuring availability and efficient handling of large-scale data queries.
+    \item Developed and optimized mobile applications with TypeScript, React Native, Tailwind CSS, and Expo, integrating interactive charts to reduce view load time by 30\%.
+    \item Enhanced a logistics delivery application with an offline-first approach using global states and asynchronous caching with React Native and TypeScript, reducing data synchronization time by 50\% and enabling continuous operation in areas with poor connectivity.
 \end{achievements}
 
-\textbf{Software Developer - Intern} \hfill Oct 2022 – Aug 2023 \\
+\textbf{Software Developer Intern} \hfill Oct 2022 – Aug 2023 \\
 \textit{CreditHub, São Paulo, São Paulo, Brazil}
 \begin{achievements}
     \item Supported the CreditHub platform with Java and Spring Boot, improving service stability and maintaining 99\% uptime.
     \item Developed and documented new microservices using Node.js and PostgreSQL, enhancing platform scalability and maintainability.
-    \item Resolved daily operational issues, utilizing Jest for unit testing to ensure robust code quality and reduce bug incidence by 40\%.
+    \item Resolved daily operational issues, using Jest for unit testing to ensure robust code quality and reduce bug occurrence by 40\%.
 \end{achievements}
 
-% Education Section
+% Education section
 \section{Education}
-\textbf{Systems Analysis and Development} \hfill [Graduation Year] \\
+\textbf{Associate Degree in Systems Analysis and Development} \hfill Feb 2022 - Aug 2024 \\
 \textit{Centro Universitário Eniac, Guarulhos, São Paulo, Brazil}
 
-\textbf{High School} \hfill [Graduation Year] \\
+\textbf{High School Diploma} \hfill Dec 2021 \\
 \textit{E.E. Homero Rubens de Sá, Guarulhos, São Paulo, Brazil}
 
 \end{document}
