--- a/my-resume-pt.tex
+++ b/my-resume-pt.tex
@@ -28,7 +28,7 @@
 
 % Cabeçalho com informações de contato
 \begin{center}
-    \textbf{\Large Desenvolvedor Full Stack \& Mobile} \\
+    \textbf{\Large Engenheiro de Software Full Stack \& Desenvolvedor Mobile} \\
     \vspace{5pt}
     Guarulhos, São Paulo, Brasil \\
     +55 11 99962-9173 | +55 11 97525-2946 \\
