fix: add email in cv's en and pt

--- a/my-resume-en.tex
+++ b/my-resume-en.tex
@@ -31,7 +31,7 @@
     \textbf{\Large Full Stack Software Engineer \& Mobile Developer} \\
     \vspace{5pt}
     Guarulhos, São Paulo, Brazil \\
-    +55 11 99962-9173 | +55 11 97525-2946 \\
+    +55 11 99962-9173 | +55 11 97525-2946 | ncaio037@gmail.com \\
     \href{https://www.linkedin.com/in/caioneves05}{linkedin.com/in/caioneves05} |
     \href{https://github.com/caioneves05}{github.com/caioneves05} |
     \href{http://caioneves.tech}{caioneves.tech}
