--- a/my-resume-pt.tex
+++ b/my-resume-pt.tex
@@ -31,7 +31,7 @@
     \textbf{\Large Engenheiro de Software Full Stack \& Desenvolvedor Mobile} \\
     \vspace{5pt}
     Guarulhos, São Paulo, Brasil \\
-    +55 11 99962-9173 | +55 11 97525-2946 \\
+    +55 11 99962-9173 | +55 11 97525-2946 | ncaio037@gmail.com \\
     \href{https://www.linkedin.com/in/caioneves05}{linkedin.com/in/caioneves05} |
     \href{https://github.com/caioneves05}{github.com/caioneves05} |
     \href{http://caioneves.tech}{caioneves.tech}
