--- a/my-resume-pt.tex
+++ b/my-resume-pt.tex
@@ -39,7 +39,7 @@
 
 % Seção de Resumo
 \section{Resumo}
-Sou Engenheiro de Software Full Stack e Desenvolvedor Mobile, com experiência no desenvolvimento de aplicações web e mobile escaláveis, focadas em desempenho e boa experiência do usuário. Atuo com TypeScript, JavaScript, React Native, Next.js, NestJS e GraphQL, além de backend em Java (Spring Boot), Node.js, MongoDB, PostgreSQL e Kafka. Tenho conhecimentos em infraestrutura de nuvem utilizando serviços da AWS, como S3, Lambda, ECS, ECR, SQS e SNS.
+Sou Engenheiro de Software Full Stack e Desenvolvedor Mobile, com experiência no desenvolvimento de aplicações web e mobile escaláveis, focadas em desempenho e boa experiência do usuário. Atuo com TypeScript, JavaScript, React Native, Next.js, NestJS e GraphQL, além de backend em Java (Spring Boot, Spring Security, Spring Data JPA, Spring MVC, Mockito), Node.js, MongoDB, PostgreSQL e Kafka. Tenho conhecimentos em infraestrutura de nuvem utilizando serviços da AWS, como S3, Lambda, ECS, ECR, SQS e SNS.
 
 No dia a dia, aplico boas práticas de desenvolvimento, como Domain-Driven Design (DDD), Clean Code e integração contínua (CI/CD), buscando entregar soluções confiáveis e de fácil manutenção. Possuo experiência com controle de versão usando Git e colaboração em times ágeis. Gosto de atuar em projetos que proponham desafios, onde seja possível otimizar processos, melhorar desempenho e criar soluções que gerem valor real para o usuário e para o negócio.
 
@@ -47,7 +47,7 @@ No dia a dia, aplico boas práticas de desenvolvimento, como Domain-Driven Desig
 \section{Competências Técnicas}
 \begin{itemize}[leftmargin=*]
     \item \textbf{Frontend \& Mobile}: TypeScript, JavaScript, React Native, Nextjs, Angular, Tailwind CSS, Expo
-    \item \textbf{Backend \& APIs}: Java, Spring Boot, Node.js, NestJS, GraphQL, MongoDB, PostgreSQL, Kafka, Jest
+    \item \textbf{Backend \& APIs}: Java, Spring Boot, Spring Security, Spring Data JPA, Spring MVC, Mockito,  Spring Data, Spring Cloud Gateway / Hibernate,  Node.js, NestJS, GraphQL, MongoDB, PostgreSQL, Kafka, Jest
     \item \textbf{Nuvem \& DevOps}: AWS (S3, Lambda, ECS, ECR, SQS, SNS), Docker, Git, pipelines CI/CD
 \end{itemize}
 
