--- a/my-resume-en.tex
+++ b/my-resume-en.tex
@@ -47,8 +47,8 @@ In my daily work, I apply best development practices such as Domain-Driven Desig
 \section{Technical Skills}
 \begin{itemize}[leftmargin=*]
     \item \textbf{Frontend \& Mobile}: TypeScript, JavaScript, React Native, Next.js, Angular, Tailwind CSS, Expo
-    \item \textbf{Backend \& APIs}: Java, Spring Boot, Node.js, NestJS, GraphQL, MongoDB, PostgreSQL, Kafka, Jest
-    \item \textbf{Cloud \& DevOps}: AWS (S3, Lambda, ECS, ECR, SQS, SNS), Docker, Git, CI/CD pipelines
+    \item \textbf{Backend \& APIs}: Java 17, Spring Boot (Security, Data, Cloud), Hibernate/JPA, Microservices, Node.js, NestJS, GraphQL, Kafka, Redis, PostgreSQL, MongoDB
+    \item \textbf{Cloud, DevOps \& Tools}: AWS (S3, Lambda, ECS, ECR, SQS, SNS), Docker, Kubernetes, Maven, Gradle, JUnit, Mockito, Git, CI/CD pipelines
 \end{itemize}
 
 % Professional Experience section
@@ -57,10 +57,11 @@ In my daily work, I apply best development practices such as Domain-Driven Desig
 \textbf{Full Stack Developer - Mid-level} \hfill Feb 2025 – Present \\
 \textit{RUK, Guarulhos, São Paulo, Brazil}
 \begin{achievements}
-    \item Developed optimized audio processing pipelines using Python and AWS Lambda, integrating with S3 and ECR to meet business goals, achieving 95\% accuracy in automated validations.
-    \item Created solutions for validating employee time records through audio analysis, using TypeScript and Node.js, automating processes and reducing manual errors by 60\%.
-    \item Implemented containerized microservices with Docker and AWS ECS, reducing infrastructure costs and increasing system reliability by 30\%.
-    \item Reduced audio processing time from 7 seconds to 2.5 seconds by deploying AWS Lambda with Docker images in Amazon ECR, using a cost-efficient pay-per-request model.
+    \item Engineered a secure \textbf{Digital Signature} microservice using \textbf{Java} and \textbf{Cryptography libraries} (Bouncy Castle), implementing PKI standards to ensure legal validity (\textbf{ICP-Brasil}) for automated document processing.
+    \item Developed scalable audio processing pipelines using \textbf{Python} and \textbf{AWS Lambda}, integrating with S3 and ECR to achieve \textbf{95\% accuracy} in automated validations.
+    \item Optimized \textbf{serverless architecture} performance, slashing processing latency by \textbf{65\%} (7s to 2.5s) via AWS Lambda and container optimization in \textbf{Amazon ECR}.
+    \item Orchestrated containerized microservices using \textbf{Docker} and \textbf{AWS ECS}, optimizing resource allocation and improving system reliability by \textbf{30\%}.
+    \item Built an automated time-tracking validation system using \textbf{TypeScript} and \textbf{Node.js}, streamlining operations and reducing manual auditing errors by \textbf{60\%}.
 \end{achievements}
 
 \textbf{Full Stack Developer} \hfill Sep 2023 – Dec 2024 \\
