--- a/my-resume-en.tex
+++ b/my-resume-en.tex
@@ -19,10 +19,6 @@
 \titleformat{\section}{\large\bfseries}{\thesection}{1em}{}
 \titlespacing*{\section}{0pt}{12pt}{6pt}
 
-% Custom itemize environment for achievements
-\newlist{achievements}{itemize}{1}
-\setlist[achievements]{label=$\cdot$, leftmargin=*, itemsep=2pt}
-
 % Document starts here
 \begin{document}
 
@@ -39,16 +35,18 @@
 
 % Summary section
 \section{Summary}
-I am a Full Stack Software Engineer and Mobile Developer with experience in developing scalable web and mobile applications focused on performance and a great user experience. I work with TypeScript, JavaScript, React Native, Next.js, NestJS, and GraphQL, as well as backends in Java (Spring Boot), Node.js, MongoDB, PostgreSQL, and Kafka. I also have knowledge in cloud infrastructure using AWS services such as S3, Lambda, ECS, ECR, SQS, and SNS.
-
-In my daily work, I apply best development practices such as Domain-Driven Design (DDD), Clean Code, and Continuous Integration/Continuous Deployment (CI/CD), aiming to deliver reliable and maintainable solutions. I have experience with version control using Git and collaboration in agile teams. I enjoy working on challenging projects where it’s possible to optimize processes, improve performance, and create solutions that deliver real value to users and businesses.
+Full Stack Software Engineer and Mobile Developer with strong experience in designing scalable distributed systems, cloud-native architectures, and high-performance mobile applications. Expert in Java (Spring Boot), TypeScript, Node.js, and React Native. Skilled in AWS cloud services (Lambda, ECS, ECR, SQS, SNS), Domain-Driven Design (DDD), Microservices, Clean Architecture, CI/CD automation, and security standards (JWT, OAuth2). Proven ability to deliver measurable improvements in performance, reliability, and user experience.
 
 % Technical Skills section
 \section{Technical Skills}
 \begin{itemize}[leftmargin=*]
-    \item \textbf{Frontend \& Mobile}: TypeScript, JavaScript, React Native, Next.js, Angular, Tailwind CSS, Expo
-    \item \textbf{Backend \& APIs}: Java 17, Spring Boot (Security, Data, Cloud), Hibernate/JPA, Microservices, Node.js, NestJS, GraphQL, Kafka, Redis, PostgreSQL, MongoDB
-    \item \textbf{Cloud, DevOps \& Tools}: AWS (S3, Lambda, ECS, ECR, SQS, SNS), Docker, Kubernetes, Maven, Gradle, JUnit, Mockito, Git, CI/CD pipelines
+    \item \textbf{Languages \& Mobile}: Java 17, TypeScript, JavaScript, Python, React Native, Expo.
+    \item \textbf{Frontend}: Next.js, React.js, Angular, Tailwind CSS, HTML5, CSS3.
+    \item \textbf{Backend}: Spring Boot (Security, Data, JPA), Node.js, NestJS, GraphQL, REST APIs, Microservices, Clean Architecture.
+    \item \textbf{Databases}: PostgreSQL (SQL), MongoDB (NoSQL), Redis, Kafka.
+    \item \textbf{Cloud \& DevOps}: AWS (S3, Lambda, ECS, ECR, API Gateway, SQS, SNS), Docker, Kubernetes, CI/CD Pipelines, Git, Maven, Gradle, GitHub Actions.
+    \item \textbf{Testing \& Quality}: JUnit, Jest, Testing Library, Integration Tests, Unit Tests, Test Automation.
+    \item \textbf{Security \& Auth}: JWT, OAuth2, PKI (ICP-Brasil), Encryption, API Security.
 \end{itemize}
 
 % Professional Experience section
@@ -56,29 +54,30 @@ In my daily work, I apply best development practices such as Domain-Driven Desig
 
 \textbf{Full Stack Developer - Mid-level} \hfill Feb 2025 – Present \\
 \textit{RUK, Guarulhos, São Paulo, Brazil}
-\begin{achievements}
-    \item Engineered a secure \textbf{Digital Signature} microservice using \textbf{Java} and \textbf{Cryptography libraries} (Bouncy Castle), implementing PKI standards to ensure legal validity (\textbf{ICP-Brasil}) for automated document processing.
-    \item Developed scalable audio processing pipelines using \textbf{Python} and \textbf{AWS Lambda}, integrating with S3 and ECR to achieve \textbf{95\% accuracy} in automated validations.
-    \item Optimized \textbf{serverless architecture} performance, slashing processing latency by \textbf{65\%} (7s to 2.5s) via AWS Lambda and container optimization in \textbf{Amazon ECR}.
-    \item Orchestrated containerized microservices using \textbf{Docker} and \textbf{AWS ECS}, optimizing resource allocation and improving system reliability by \textbf{30\%}.
-    \item Built an automated time-tracking validation system using \textbf{TypeScript} and \textbf{Node.js}, streamlining operations and reducing manual auditing errors by \textbf{60\%}.
-\end{achievements}
+\begin{itemize}[leftmargin=*]
+    \item Engineered a secure \textbf{Digital Signature} microservice using \textbf{Java}, Spring Boot, and Bouncy Castle, fully compliant with \textbf{ICP-Brasil PKI} standards, ensuring legal validity and increasing document processing integrity.
+    \item Developed scalable audio-processing pipelines using \textbf{Python}, \textbf{AWS Lambda}, and S3, achieving \textbf{95\% accuracy} in automated validations and reducing manual review time by 70\%.
+    \item Optimized serverless performance, reducing end-to-end processing latency by \textbf{65\%} (7s → 2.5s) through AWS Lambda tuning and container optimization in \textbf{Amazon ECR}.
+    \item Containerized and orchestrated microservices using \textbf{Docker} and \textbf{AWS ECS}, improving system reliability by \textbf{30\%} and decreasing deployment time by 40\%.
+    \item Built an automated time-tracking validation system using \textbf{Node.js}, \textbf{TypeScript}, and PostgreSQL, reducing auditing errors by \textbf{60\%} and cutting operational workload significantly.
+\end{itemize}
 
 \textbf{Full Stack Developer} \hfill Sep 2023 – Dec 2024 \\
 \textit{Mobi Logística, Guarulhos, São Paulo, Brazil}
-\begin{achievements}
-    \item Built scalable systems using NestJS, GraphQL, MongoDB, and PostgreSQL, ensuring availability and efficient handling of large-scale data queries.
-    \item Developed and optimized mobile applications with TypeScript, React Native, Tailwind CSS, and Expo, integrating interactive charts to reduce view load time by 30\%.
-    \item Enhanced a logistics delivery application with an offline-first approach using global states and asynchronous caching with React Native and TypeScript, reducing data synchronization time by 50\% and enabling continuous operation in areas with poor connectivity.
-\end{achievements}
+\begin{itemize}[leftmargin=*]
+    \item Architected scalable backend systems using \textbf{NestJS}, \textbf{GraphQL}, and PostgreSQL, handling high-volume queries with consistent \textbf{99\% uptime}.
+    \item Developed and optimized mobile applications with \textbf{React Native} and Expo, implementing performance-focused UI rendering strategies that reduced view load time by \textbf{30\%}.
+    \item Designed and implemented an \textbf{offline-first} architecture using async storage and caching mechanisms, reducing sync time by \textbf{50\%} and enabling reliability in low-connectivity environments.
+    \item Improved API performance through query optimization and caching, lowering response latency by 25\% across strategic endpoints.
+\end{itemize}
 
 \textbf{Software Developer Intern} \hfill Oct 2022 – Aug 2023 \\
-\textit{CreditHub, São Paulo, São Paulo, Brazil}
-\begin{achievements}
-    \item Supported the CreditHub platform with Java and Spring Boot, improving service stability and maintaining 99\% uptime.
-    \item Developed and documented new microservices using Node.js and PostgreSQL, enhancing platform scalability and maintainability.
-    \item Resolved daily operational issues, using Jest for unit testing to ensure robust code quality and reduce bug occurrence by 40\%.
-\end{achievements}
+\textit{CreditHub, São Paulo, Brazil}
+\begin{itemize}[leftmargin=*]
+    \item Maintained distributed microservices using \textbf{Java} and \textbf{Spring Boot}, contributing to maintaining \textbf{99\%+ uptime} across core financial systems.
+    \item Developed and maintained \textbf{REST APIs} using Node.js and PostgreSQL, enhancing scalability, stability, and development velocity.
+    \item Implemented automated testing workflows with \textbf{Jest}, \textbf{JUnit}, and Integration Tests, improving test coverage and reducing production defects by \textbf{40\%}.
+\end{itemize}
 
 % Education section
 \section{Education}
